# BourseVisualisation

./: README.md  pyproject.toml
boursevisualisation/: Actions.csv  Actions.json  GetHist.py  GetVisual.py  Test.ipynb  Webapp.py
boursevisualisation/.ipynb_checkpoints/: Test-checkpoint.ipynb
tests/: test_boursevisualisation.py
